[project]
name = "wallege"
version = "0.2.0"
description = "Background removal and composite image generator CLI tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rembg>=2.0.61",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "onnxruntime>=1.17.0,<1.20.0",
]

[project.scripts]
wallege = "main:main"
